@@ -1,6 +1,6 @@
 dnl Process this file with autoconf to produce a configure script.
 
-AC_INIT([Gawk json Extension], 2.0.0, gawkextlib-users@lists.sourceforge.net, gawk-json)
+AC_INIT([Gawk json Extension], 2.0.1, gawkextlib-users@lists.sourceforge.net, gawk-json)
 
 AC_CONFIG_MACRO_DIR([m4])
 AC_CONFIG_AUX_DIR([build-aux])
