@@ -1,6 +1,8 @@
 EXTRA_DIST = \
 	json.awk \
-	json.ok
+	json.ok \
+	json-mdim.awk \
+	json-mdim.ok
 
 # Get rid of core files when cleaning and generated .ok file
 CLEANFILES = _* *_.png core core.* junk out1 out2 out3 test1 test2 seq *~
@@ -13,7 +15,7 @@ include test.makefile
 check:	test-msg-start mytests test-msg-end
 	@$(MAKE) pass-fail || { $(MAKE) diffout; exit 1; }
 
-mytests: json
+mytests: json json-mdim
 
 test-msg-start:
 	@echo "======== Starting json tests ========"
@@ -22,6 +24,11 @@ test-msg-end:
 	@echo "======== Done with json tests ========"
 
 json::
+	@echo $@
+	@$(AWK) -l json -f $(srcdir)/$@.awk >_$@ 2>&1 || echo EXIT CODE: $$? >>_$@
+	@-$(CMP) $(srcdir)/$@.ok _$@ && rm -f _$@
+
+json-mdim::
 	@echo $@
 	@$(AWK) -l json -f $(srcdir)/$@.awk >_$@ 2>&1 || echo EXIT CODE: $$? >>_$@
 	@-$(CMP) $(srcdir)/$@.ok _$@ && rm -f _$@
