@@ -1,0 +1,5 @@
+1
+a[1][1] = 1
+a[2][1] = 2
+a[2][2] = 3
+a[2][3] = 4
