@@ -1,3 +1,8 @@
+2023-12-05         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* Makefile.am: Add new test: json-mdim.
+	* json-mdim.awk, json-mdim.ok: New files.
+
 2022-10-20         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* json_bool.awk: Additional tests for bool values.
